# O8H31VtPtpE6kK45FiX6W0JklGPpoN3A

./: CMakeLists.txt  README.md  mod.json
.github/workflows/: multi-platform.yml  uwu.yml
resources/: OFL.txt  presets.json
src/: colorTypes.hpp  main.cpp
src/bettercocos/: CCMultiColorMotionStreak.cpp  CCMultiColorMotionStreak.hpp
src/hooks/: MenuLayer.cpp  PlayerObject.cpp  debug.cpp
src/ui/: ColorCell.cpp  ColorCell.hpp  ColorPopup.cpp  ColorPopup.hpp  GrabNodeLayer.cpp  GrabNodeLayer.hpp  PresetPopup.cpp  PresetPopup.hpp  README.md  colorCell.cpp  colorCell.h  colorPopup.cpp  colorPopup.h
src/utils/: Keybinds.cpp  Keybinds.hpp  PresetHandler.cpp  PresetHandler.hpp  color.cpp  color.h  customSettings.cpp  customSettings.h  customSettings.hpp  utils.hpp
